<resources>
    <string name="update_now">立即更新</string>
    <string name="remind_me_later">以后再说</string>
    <string name="version_release">发现新版本，请及时更新</string>
    <string name="down">下载</string>
    <string name="down_loading">正在下载，请稍后...</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="order_cash_notice" translatable="false">蚂蚁小店商家提现收取0.6%手续费，比如提现1000元，实际到账为994元。(客户在蚂蚁小店使用支付宝或者微信支付时，会收取总部0.6%的手续费)</string>
    <string name="share_content">随心生活就在家门口的手机超市，轻松下单闪电送达！商品低价促销中，抓紧抢购！</string>
    <string name="app_name">蚂蚁掌柜</string>
    <string name="digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="EMPTY_STRING"></string>
    <string name="NECESSARY">必填</string>
    <string name="NOT_NECESSARY">可不填</string>
    <string name="not_than_max_length">长度最大值不超过</string>
    <string name="username_hint">账号</string>
    <string name="password_hint">密码</string>
    <string name="username_error">账号不能为空，请输入!</string>
    <string name="password_error">密码不能为空，请输入!</string>
    <string name="original_password_error">原密码不能为空，请输入!</string>
    <string name="new_password_error">新密码不能为空，请输入!</string>
    <string name="two_password_error">两次新密码不一致，请重新输入!</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="type">类型</string>
    <string name="nodata">这一时段暂时没有统计报表哦</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="save_success">保存成功!</string>
    <string name="out">退&#160;&#160;出</string>
    <string name="up_pas">修改密码</string>
    <string name="message_center">消息中心</string>
    <string name="about">关于系统</string>
    <string name="shop_info">店铺信息</string>
    <string name="help">帮助中心</string>
    <string name="now_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="username">用户名：</string>
    <string name="sure_new_password">重复密码：</string>
    <string name="password_hit">请输入6-10位字母/数字</string>
    <string name="save">保存</string>
    <string name="save_continue">保存并继续新增</string>
    <string name="shop_name">店家名称：</string>
    <string name="address">详细地址：</string>
    <string name="contacts">联系人：</string>
    <string name="phone">联系电话：</string>
    <string name="setting_info">系统参数</string>
    <string name="pay_type">支付方式</string>
    <string name="ticket_setting">小票设置</string>
    <string name="customer_remark">客单备注</string>
    <string name="message_setting">短信设置</string>
    <string name="home_setting">主页显示设置</string>
    <string name="screen_setting">店内屏幕广告</string>
    <string name="delete_data">营业数据清理</string>
    <string name="help_video">帮助视频</string>
    <string name="question">常见问题</string>
    <string name="essential_information">基本信息</string>
    <string name="other_tools">其他工具</string>
    <string name="shop_setting">店家设置</string>
    <string name="shop_business_sum">门店营业汇总</string>
    <string name="operation_day">日常运营</string>
    <string name="basic_data">基础数据</string>
    <string name="dialog_waiting">努力加载中...</string>
    <string name="notice">公告通知</string>
    <string name="inventory_warning">库存预警</string>
    <string name="warning_info">小店中的以下商品库存达到了库存的最低库存数，请及时补货</string>
    <string name="warning_number">库存报警值</string>
    <string name="stock_number">现货存数</string>
    <string name="report">报表中心</string>
    <string name="toady_profit">今日毛利(元)</string>
    <string name="cash_profit">现金收入(元)</string>
    <string name="alipay_profit">支付宝收入(元)</string>
    <string name="wechat_profit">微信收入(元)</string>
    <string name="cash_number">现金笔数(单)</string>
    <string name="alipay_number">支付宝笔数(单)</string>
    <string name="wechat_number">微信笔数(单)</string>
    <string name="sold_goods_number">销售商品数(种)</string>
    <string name="sold_cost_total">销售总成本(元)</string>
    <string name="sold_sale_total">销售总金额(元)</string>
    <string name="gross_profit">毛&#160;&#160;利(元)</string>
    <string name="receivables_report">收款统计报表</string>
    <string name="employee_report">员工业绩报表</string>
    <string name="employee_statistic_report">员工统计报表</string>
    <string name="goods_trade_report">交易流水报表</string>
    <string name="goods_category_report">商品分类销售报表</string>
    <string name="goods_sales_report">商品销售报表</string>
    <string name="goods_profit_report">商品收益报表</string>
    <string name="goods_purchase_report">商品采购报表</string>
    <string name="member_integral_report">连锁积分报表</string>
    <string name="stock_balance_report">库存结存报表</string>
    <string name="stock_inventory_report">库存盘点报表</string>
    <string name="staff_in_out_work">员工上下班</string>
    <string name="staff_in_out_work_search">员工上下班查询</string>
    <string name="staff_in_out_work_detail">员工上下班详情</string>
    <string name="source">来源</string>
    <string name="status">状态</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="total_type">统计方式</string>
    <string name="goods_statistics">按商品统计</string>
    <string name="brand_statistics">按品牌统计</string>
    <string name="category_statistics">按分类统计</string>
    <string name="all">全部</string>
    <string name="physical_stores">实体门店</string>
    <string name="ant_shop">蚂蚁小店</string>
    <string name="back">返回</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="seach">查 询</string>
    <string name="delete">删 除</string>
    <string name="iseach">搜索</string>
    <string name="total">合计：</string>
    <string name="cash">现金</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="please_select">请选择</string>
    <string name="select_start_time">开始时间不能为空，请选择!</string>
    <string name="select_end_time">结束时间不能为空，请选择!</string>
    <string name="start_below_end">开始时间须小于等于结束时间，请重新选择!</string>
    <string name="select_time_section">只能查询一个月以内的数据，请重新选择!</string>
    <string name="single">单</string>
    <string name="total_sales">总销售额：</string>
    <string name="amount_money">应收金额：</string>
    <string name="goods_trade_money">实收金额：</string>
    <string name="single_code">单号：</string>
    <string name="create_time">创建时间：</string>
    <string name="mamager">管理员：</string>
    <string name="pay_info">支付明细：</string>
    <string name="bill_info">账单明细</string>
    <string name="goods_name">商品名称</string>
    <string name="sum">数量</string>
    <string name="money">金额（元）</string>
    <string name="sales_number">总销售商品数：</string>
    <string name="scan">扫一扫</string>
    <string name="bar_code">条形码：</string>
    <string name="goods_sales_number">销售商品数：</string>
    <string name="dimensional_bar_code">二维码/条码</string>
    <string name="goods_manager">商品管理</string>
    <string name="goods_sort">商品分类</string>
    <string name="goods_add">商品新增</string>
    <string name="goods_edit">商品编辑</string>
    <string name="goods_list">商品列表</string>
    <string name="wines_drinks">酒水饮料</string>
    <string name="wines">酒类饮品</string>
    <string name="goods_code">商品条码:</string>
    <string name="goods_cat">商品类目:</string>
    <string name="first_cat">一级类目</string>
    <string name="second_cat">二级类目</string>
    <string name="third_cat">三级类目</string>
    <string name="goods_names">商品名称:</string>
    <string name="goods_search">商品列表查询</string>
    <string name="goods_sale_price">商品售价:</string>
    <string name="goods_member_price">会员售价:</string>
    <string name="goods_pur_price">商品进价:</string>
    <string name="goods_stock">商品库存:</string>
    <string name="goods_sim_code">商品速记码:</string>
    <string name="inventory_warn_value">库存预警值:</string>
    <string name="goods_format">商品规格:</string>
    <string name="goods_unit">商品单位:</string>
    <string name="goods_image">商品图片:</string>
    <string name="goods_deadline">商品保质期:</string>
    <string name="is_weight">是否称重:</string>
    <string name="weight">称重</string>
    <string name="not_weight">不称重</string>
    <string name="add_image">添加图片</string>
    <string name="default_price">必填，默认价格0</string>
    <string name="default_price_no">选填，默认价格0</string>
    <string name="default_date">选填，默认0</string>
    <string name="default_warn_value_high">选填，高位，默认0</string>
    <string name="default_warn_value_low">选填，低位，默认0</string>
    <string name="necessary">选填</string>
    <string name="sale_time">销售时间</string>
    <string name="sale_singular">销售单数</string>
    <string name="sale_amount">销售金额（元）</string>
    <string name="refund_singular">退货单数</string>
    <string name="refund_amount">退货金额（元）</string>
    <string name="sale_cost">销售成本（元）</string>
    <string name="sale_maori">销售毛利（元）</string>
    <string name="maori_rate">毛利率（%）</string>
    <string name="stock_manage">库存管理</string>
    <string name="goods_stock_statistics">库存查询</string>
    <string name="goods_stock_inventory">库存盘点</string>
    <string name="goods_stock_inventory_list">库存异动查询</string>
    <string name="goods_stock_add_statistics">新增盘点</string>
    <string name="goods_stock_record_statistics">盘点记录</string>
    <string name="confirm_adjust">确定调整</string>
    <string name="stock_adjust">库存调整</string>
    <string name="stock_statistics_record_adjust">库存盘点记录</string>
    <string name="goods_statistics_record_adjust">商品盘点记录</string>
    <string name="stock_statistics_record_detail">商品盘点详情</string>
    <string name="search_condition">查询条件</string>
    <string name="search_code">条形码/商品名称/速记码</string>
    <string name="nothing_to_search">没有搜索到任何信息哦！</string>
    <string name="operation_type">操作类型</string>
    <string name="adjust_count">调整数量</string>
    <string name="after_adjust_count">调整后数量</string>
    <string name="adjust_time">调整时间</string>
    <string name="adjust_report_code">调整单号</string>
    <string name="operator">操作人 </string>
    <string name="member">会员</string>
    <string name="member_search">会员查询</string>
    <string name="member_info">会员信息</string>
    <string name="balance_detail">余额明细</string>
    <string name="balance_happen_detail">余额发生明细</string>
    <string name="happen_before_money">发生前金额</string>
    <string name="happen_money">发生金额</string>
    <string name="happen_after_money">发生后金额</string>
    <string name="trade_order_number">交易订单号</string>
    <string name="remark">备注</string>
    <string name="newOperator">新增人</string>
    <string name="newTime">新增时间</string>
    <string name="integral_detail">积分明细</string>
    <string name="happen_before_integral">发生前积分</string>
    <string name="happen_integral">发生积分</string>
    <string name="happen_after_integral">发生后积分</string>
    <string name="integral_happen_detail">积分发生明细</string>
    <string name="trade_detail">交易明细</string>
    <string name="trade_happen_detail">交易发生明细</string>
    <string name="member_detail">会员明细</string>
    <string name="member_happen_detail">会员发生明细</string>
    <string name="member_card_search">会员卡查询</string>
    <string name="member_recharge_setting">充值设置</string>
    <string name="member_integral_exchange_setting">积分兑换设置</string>
    <string name="member_card_grant">会员卡发放</string>
    <string name="member_card_recharge">会员卡充值</string>
    <string name="member_integral_exchange">积分兑换</string>
    <string name="member_give_integral">会员赠积分</string>
    <string name="member_modify_password">修改卡密码</string>
    <string name="member_report_activate">挂失与激活</string>
    <string name="birthday_promotion_card">生日促卡</string>
    <string name="change_member_card">会员换卡</string>
    <string name="in_stock">收货入库</string>
    <string name="out_stock">退货出库</string>
    <string name="inout_stock_search">出入库查询</string>
    <string name="bargain_goods">特价商品</string>
    <string name="full_delivery">满送</string>
    <string name="full_cut">满减</string>
    <string name="shop_ewcode">店铺二维码</string>
    <string name="shop_settings">店铺设置</string>
    <string name="shop_order_manager">订单管理</string>
    <string name="shop_goods_manager">商品管理</string>
    <string name="shop_order_cash">提现申请</string>
    <string name="shop_check_account">余额对账</string>
</resources>