<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/home_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/type"/>

    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_happen_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/happen_before_money" />

    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_happen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/happen_money"/>
    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_happen_after"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/happen_after_money"/>
    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_trade_order_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/trade_order_number"/>

    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/remark" />
    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/newOperator" />
    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mHintTextColor="@color/minor_text_color"
        app:mLabel="@string/newTime" />
</LinearLayout>
