<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/home_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             <TextView
                 android:text="@string/receivables_report"
                 android:id="@+id/receivables_report"
                 style="@style/comment_manager_textView"
                 android:drawableTop="@mipmap/cashier_report"/>
            <TextView
                android:text="@string/employee_report"
                android:id="@+id/employee_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/employee_report"/>
            <TextView
                android:text="@string/goods_trade_report"
                android:id="@+id/goods_trade_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/goods_trade_report"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/goods_sales_report"
                android:id="@+id/goods_sales_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/goods_sales_report"/>
            <TextView
                android:text="@string/goods_profit_report"
                android:id="@+id/goods_profit_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/goods_profit_report"/>
            <TextView
                android:text="@string/staff_in_out_work"
                android:id="@+id/staff_in_out_work"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/ic_inout_work"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/member_integral_report"
                android:id="@+id/ll_integral_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/ic_integral_report"/>
            <TextView
                android:layout_marginLeft="@dimen/space_x0.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/stock_balance_report"
                android:id="@+id/stock_balance_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/stock_balance_report"/>

            <TextView
                android:text="@string/stock_inventory_report"
                android:id="@+id/stock_inventory_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/stock_inventory_report"/>

            <TextView
                android:text="@string/goods_purchase_report"
                android:id="@+id/goods_purchase_report"
                style="@style/comment_manager_textView"
                android:drawableTop="@mipmap/goods_purchase_report"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>