<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    android:orientation="vertical">

    <com.yun.ma.yi.app.module.common.view.ItemTextView
        android:id="@+id/useranme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.yun.ma.yi.app.module.common.view.ItemEditText2
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hitText="@string/NECESSARY"
        app:label="@string/now_password"
        app:mInputType="password"
        app:mMaxLength="10"/>
    <com.yun.ma.yi.app.module.common.view.ItemEditText2
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hitText="@string/NECESSARY"
        app:label="@string/new_password"
        app:mInputType="password"
        app:mMaxLength="10"/>
    <com.yun.ma.yi.app.module.common.view.ItemEditText2
        android:id="@+id/pasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hitText="@string/NECESSARY"
        app:label="@string/sure_new_password"
        app:mInputType="password"
        app:mMaxLength="10"/>

    <Button
        android:id="@+id/save_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_height"
        android:layout_marginLeft="@dimen/space_x2"
        android:layout_marginRight="@dimen/space_x2"
        android:text="@string/save"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:background="@drawable/shape"/>

</LinearLayout>