<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.yun.ma.yi.app.module.goods.GoodsManagerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/home_title">
        <TextView
            android:text="@string/goods_sort"
            android:id="@+id/ll_goods_sort"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/goods_sort"/>
        <TextView
            android:text="@string/goods_add"
            android:id="@+id/ll_goods_add"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/goods_add"/>
        <TextView
            android:text="@string/goods_list"
            android:id="@+id/ll_goods_list"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/goods_list"/>
    </LinearLayout>
</LinearLayout>
