<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_title"
        android:orientation="horizontal">
        <TextView
            android:text="@string/goods_stock_statistics"
            android:id="@+id/ll_stock_search"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/stock_search"/>
        <TextView
            android:text="@string/goods_stock_add_statistics"
            android:id="@+id/ll_stock_statistics"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/stock_statistic"/>
        <TextView
            android:text="@string/goods_stock_inventory_list"
            android:id="@+id/ll_stock_statistics_search"
            style="@style/comment_manager_textView"
            android:drawableTop="@mipmap/stock_statistic_search"/>

    </LinearLayout>

</LinearLayout>