<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context="com.yun.ma.yi.app.module.inoutstock.InOutStockManagerActivity">
      <LinearLayout
          android:background="@color/home_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
              <TextView
                  android:id="@+id/tv_in_stock"
                  style="@style/comment_manager_textView"
                  android:drawableTop="@mipmap/in_stock"
                  android:text="@string/in_stock" />
              <TextView
                  android:id="@+id/tv_out_stock"
                  style="@style/comment_manager_textView"
                  android:drawableTop="@mipmap/out_stock"
                  android:text="@string/out_stock" />
              <TextView
                  android:id="@+id/tv_inout_stock_search"
                  style="@style/comment_manager_textView"
                  android:drawableTop="@mipmap/inout_stock_search"
                  android:text="@string/inout_stock_search" />
      </LinearLayout>

</LinearLayout>
